--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.2.1+1
+  http: ^1.0.0
+  dio_cookie_manager: ^3.1.0
+  cookie_jar: ^4.0.3
+  dio_http2_adapter: ^2.3.0
+  shared_preferences: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
